# Markov.core

./: .gitignore  CMakeLists.txt  Makefile  README.md  arnoldi_mod.f90  cf1_mstep_mod.f90  erhmm_estep_time_mod.f90  f90_wrapper.f90  gamma_mod.f90  gph_estep_grouppoi_mod.f90  gph_estep_wtime_mod.f90  gsstep_mm_mod.f90  kron_mod.f90  map_estep_group_mod.f90  map_mexp_unif_mod.f90  map_mexpconv_unif_mod.f90  map_mstep_mod.f90  map_unif_matrix_mod.f90  markovinv_dgesv_mod.f90  markovinv_gs_mod.f90  markovst_dgesv_mod.f90  markovst_gth_mod.f90  markovstsen_gs_mod.f90  mexp_pade_mod.f90  mexp_unif_mod.f90  mexpconv_unif_mod.f90  poisson_mod.f90  spkron_mod.f90  unif_matrix_mod.f90
c_wrappers/headers/: cc_arnoldi.h  cc_blas.h  cc_gaussinte.h  cc_markovinv_dgesv.h  cc_markovinv_gs.h  cc_markovqst2_gs.h  cc_markovqst_gs.h  cc_markovst_dgesv.h  cc_markovst_gs.h  cc_markovst_gth.h  cc_markovst_sor.h  cc_markovstsen_dgesv.h  cc_markovstsen_gs.h  cc_mexp_pade.h  cc_mexp_unif.h  cc_mexpconv_unif.h  cc_mpow.h  (+3 more)
em/: erhmm_mstep_mod.f90  gph_estep_group_mod.f90  gph_mstep_mod.f90  herlang_emstep_mod.f90
include/: cppapply.hpp  cppblas.hpp  csr_matrix.h  dblas.h  dense_matrix.h  dsparse.h  dsparse_coo.h  dsparse_csc.h  dsparse_csr.h  gaussinte.hpp  marlib.h  marlib_dcopy.hpp  marlib_dnnz.hpp  marlib_mapapply.hpp  marlib_traits.hpp  mexp_pade.hpp  mexp_unif.hpp  mexpconv_unif.hpp  mexpint_unif.hpp  poisson.hpp  vector.h
math/: erlang_dist_mod.f90  gamma_dist_mod.f90  gaussinte_mod.f90  poisson_mod.f90  quad_extra_mod.f90
matrix/: gsstep_mod.f90  sparse_mod.f90  spblas_mod.f90
mexp/: mexp_unif_mod.f90  mexpint_unif_mod.f90  mpow_mod.f90  unif_matrix_mod.f90
st/: markovqst2_gs_mod.f90  markovqst_gs_mod.f90  markovst_gs_mod.f90  markovst_sor_mod.f90
stsen/: markovstsen_dgesv_mod.f90
test/: _csr_matrix4test.h  _dense_matrix4test.h  _vector4test.h  coo_matrix.h  cppblas_coo.hpp  cppblas_csc.hpp  cppblas_csr.hpp  csc_matrix.h  csr_matrix.h  dense_matrix.h  test_cppblas.result  test_ctmc.cpp  test_dblas.cpp  test_dblas.result  test_dblascpp.cpp  test_gamma.cpp  test_mexp.cpp  test_ph.cpp  test_poisson.cpp  test_spblas.cpp  vector.h
wrappers/: f90_arnoldi.f90  f90_gaussinte.f90  f90_markovinv_dgesv.f90  f90_markovinv_gs.f90  f90_markovqst2_gs.f90  f90_markovqst_gs.f90  f90_markovst_dgesv.f90  f90_markovst_gs.f90  f90_markovst_gth.f90  f90_markovst_sor.f90  f90_markovstsen_dgesv.f90  f90_markovstsen_gs.f90  f90_mexp_pade.f90  f90_mexp_unif.f90  f90_mexpconv_unif.f90  f90_mexpint_unif.f90  f90_mpow.f90  f90_poisson.f90  f90_unif_matrix.f90
(+21 files in other folders)
